--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-starter-kit",
+  "name": "app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "map-explorer-build": "ng build --configuration production --source-map=true --output-hashing=none",
+    "build-analyzer": "npm run map-explorer-build && source-map-explorer dist/app/main.js"
   },
   "private": true,
   "dependencies": {
@@ -16,7 +18,6 @@
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
-    "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/forms": "^14.1.0",
     "@angular/material": "^14.2.6",
     "@angular/platform-browser": "^14.1.0",
@@ -41,7 +42,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "2.7.1",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "source-map-explorer": "^2.5.3"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
